--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>GRE Words</title>
-  <base href="/dict_dist/">
+  <base href="/dict_test/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="All the GRE Words">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
